-
Bug
-
Resolution: Fixed
-
P2
-
7u21, 7u25
-
b31
-
Verified
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8016555 | 8 | Anton Tarasov | P2 | Closed | Fixed | b96 |
JDK-8019736 | 7u60 | Leonid Romanov | P2 | Resolved | Fixed | b01 |
JDK-8019456 | 7u45 | Leonid Romanov | P2 | Closed | Fixed | b01 |
WebCenter Capture product is experiencing some focus issues with their ADF web page that contains a Java applet. These are 3 main issues:
1) When the web page is displayed, the focus is on the first link of the ADF page. When we press the TAB key, focus always remains within the browser page and never wants to tab into the applet. A mouse click in the applet is always necessarily to have the applet get focus. This issue actually happened even with Java 6.
2) While in the applet, some user actions require a JDialog be displayed. In Java 6, when the JDialog got displayed, it would get focus transferred to it, but in Java 7, it doesnt, so it requires a mouse click on it as well.
3)Similar in nature to the first issue, theres also an issue tabbing out of the applet to get back to the browser. When I test with Firefox, after I tab off the last focusable component in the applet, it will correctly tab out of the applet. In Internet Explorer, however, after tabbing off the last component in the applet, it will loop back to the first component in the applet.
Steps to reproduce:
Try to load http://adc2191118:7101/dc-client/faces/dc-client.jspx
usererid/password: weblogic/weblogic1
(if above link is not working ten try following)
http://adc2191118:7101/dc-client
weblogic/weblogic1
After logging in, youll see the client applet in an ADF page (as seen in attached screenshot). The applet is the area between the Oracle logo at the top and the copyright and the bottom. On first run, it will download some client OSGI bundles, so it will take a minute or two before the clients main area is displayed. I dont know what has the focus initially because I can't tab anywhere. After you click in the applet, and then click on the Batch Search button(marked by arrow inside the attached screenshot), the batch search dialog will come up but it will not get focus like it used to get with Java 6.
Also, if you click on the Preferences ADF link(marked in attached screenshot), this calls Javascript which calls into the applet to display the preferences panel. Focus is not given to the applet here either.
1) When the web page is displayed, the focus is on the first link of the ADF page. When we press the TAB key, focus always remains within the browser page and never wants to tab into the applet. A mouse click in the applet is always necessarily to have the applet get focus. This issue actually happened even with Java 6.
2) While in the applet, some user actions require a JDialog be displayed. In Java 6, when the JDialog got displayed, it would get focus transferred to it, but in Java 7, it doesnt, so it requires a mouse click on it as well.
3)Similar in nature to the first issue, theres also an issue tabbing out of the applet to get back to the browser. When I test with Firefox, after I tab off the last focusable component in the applet, it will correctly tab out of the applet. In Internet Explorer, however, after tabbing off the last component in the applet, it will loop back to the first component in the applet.
Steps to reproduce:
Try to load http://adc2191118:7101/dc-client/faces/dc-client.jspx
usererid/password: weblogic/weblogic1
(if above link is not working ten try following)
http://adc2191118:7101/dc-client
weblogic/weblogic1
After logging in, youll see the client applet in an ADF page (as seen in attached screenshot). The applet is the area between the Oracle logo at the top and the copyright and the bottom. On first run, it will download some client OSGI bundles, so it will take a minute or two before the clients main area is displayed. I dont know what has the focus initially because I can't tab anywhere. After you click in the applet, and then click on the Batch Search button(marked by arrow inside the attached screenshot), the batch search dialog will come up but it will not get focus like it used to get with Java 6.
Also, if you click on the Preferences ADF link(marked in attached screenshot), this calls Javascript which calls into the applet to display the preferences panel. Focus is not given to the applet here either.
- backported by
-
JDK-8019736 Regression: Focus issues with Oracle WebCenter Capture applet
-
- Resolved
-
-
JDK-8016555 Regression: Focus issues with Oracle WebCenter Capture applet
-
- Closed
-
-
JDK-8019456 Regression: Focus issues with Oracle WebCenter Capture applet
-
- Closed
-
- duplicates
-
JDK-8015652 Regression : Focus doesn't move to button in SwingSet2 when a dialogue appears in JDK8b91
-
- Closed
-