8014821: Regression: Focus issues with Oracle WebCenter Capture applet

Reviewed-by: leonidr